# screenlocker

./: CMakeLists.txt  README.md
checkpass/: CMakeLists.txt  checkpass_pam.c
debian/: changelog  control  copyright
screenlocker/: CMakeLists.txt  application.cpp  application.h  authenticator.cpp  authenticator.h  main.cpp  pamauthentication.cpp  pamauthentication.h  qml.qrc
screenlocker/qml/: IconButton.qml  LockScreen.qml  LoginButton.qml  MprisItem.qml
translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  bn_BD.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hr_HR.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  mg.ts  ml_IN.ts  nb_NO.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  tr_TR.ts  (+7 more)
